err/pyluminous.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyFresnel'...
Compiling './lib/python3.5/site-packages/pyFresnel/constants.py'...
***   File "./lib/python3.5/site-packages/pyFresnel/constants.py", line 101
    print 'Available functions:'
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyFresnel/effective_medium.py'...
***   File "./lib/python3.5/site-packages/pyFresnel/effective_medium.py", line 126
    print 'Effective Medium dielectric constant'
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyLuminous'...
Compiling './lib/python3.5/site-packages/pyLuminous/constants.py'...
***   File "./lib/python3.5/site-packages/pyLuminous/constants.py", line 101
    print 'Available functions:'
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyLuminous/incoherent_transfer_matrix.py'...
***   File "./lib/python3.5/site-packages/pyLuminous/incoherent_transfer_matrix.py", line 18
    print "numpy imported"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyLuminous/install_sopra_data.py'...
***   File "./lib/python3.5/site-packages/pyLuminous/install_sopra_data.py", line 81
    print info.filename
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyLuminous/transfer_matrix.py'...
***   File "./lib/python3.5/site-packages/pyLuminous/transfer_matrix.py", line 58
    print "numpy imported"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyLuminous-0.8.egg-info'...
Listing './lib/python3.5/site-packages/pyQW'...
Compiling './lib/python3.5/site-packages/pyQW/finite_well.py'...
***   File "./lib/python3.5/site-packages/pyQW/finite_well.py", line 20
    print 'libraries imported'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
